feat: fiz um endpoint para atualizar informações dos ativo
