# src/docs/swagger.json
@@ -35,8 +35,8 @@
               "examples": {
                 "login": {
                   "value": {
-                    "email": "francisco@gmail.com",
-                    "password": "123456"
+                    "email": "admin@gmail.com",
+                    "password": "admin"
                   }
                 }
               }
@@ -114,6 +114,139 @@
                     "properties":{
                       "token": {
                         "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/assets/newAtivo": {
+      "post": {
+        "summary": "Cadastra um novo Ativo.",
+        "description": "Essa rota cadastra um novo Ativo.",
+        "tags": ["Cadastrar um novo Ativo"],
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/newAtivoBody"
+              },
+              "examples": {
+              "newCliente": {
+                "value": {
+                    "ticker": "ECON15",
+                    "qtdDisponivel": 150,
+                    "valor": "200"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "Bad Request."
+          },
+          "401": {
+            "description": "Unauthorized."
+          },
+          "422": {
+            "description": "Unprocessable Entity."
+          },
+          "409": {
+            "description": "Conflict."
+          },
+          "201": {
+          "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "itens": {
+                    "type": "object",
+                    "properties":{
+                      "codAtivo": {
+                        "type": "integer"
+                      },
+                      "ticker": {
+                        "type": "string"
+                      },
+                      "qtdDisponivel": {
+                        "type": "string"
+                      },
+                      "valor": {
+                        "type": "decimal"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/assets/ativos/update": {
+      "put": {
+        "summary": "Atuzliza algum Ativo.",
+        "description": "Essa rota é para atualizar as informações de Ativos.",
+        "tags": ["Atualiza os dados de um Ativo"],
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/updateAtivoBody"
+              },
+              "examples": {
+              "newCliente": {
+                "value": {
+                  "codAtivo": 2,
+                  "ticker": "VALE4",
+                  "qtdDisponivel": 204,
+                  "valor": "207"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "Bad Request."
+          },
+          "401": {
+            "description": "Unauthorized."
+          },
+          "422": {
+            "description": "Unprocessable Entity."
+          },
+          "409": {
+            "description": "Conflict."
+          },
+          "201": {
+          "description": "updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "itens": {
+                    "type": "object",
+                    "properties":{
+                      "codAtivo": {
+                        "type": "integer"
+                      },
+                      "ticker": {
+                        "type": "string"
+                      },
+                      "qtdDisponivel": {
+                        "type": "string"
+                      },
+                      "valor": {
+                        "type": "decimal"
                       }
                     }
                   }
@@ -773,6 +906,37 @@
             "type": "string"
           },
           "saldo": {
+            "type": "decimal"
+          }
+        }
+      },
+      "newAtivoBody": {
+        "type": "object",
+        "properties": {
+          "ticker": {
+            "type": "string"
+          },
+          "qtdDisponivel": {
+            "type": "integer"
+          },
+          "valor": {
+            "type": "decimal"
+          }
+        }
+      },
+      "updateAtivoBody": {
+        "type": "object",
+        "properties": {
+          "codAtivo": {
+            "type": "integer"
+          },
+          "ticker": {
+            "type": "string"
+          },
+          "qtdDisponivel": {
+            "type": "integer"
+          },
+          "valor": {
             "type": "decimal"
           }
         }
